configs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-application
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      run: express-application
  strategy:
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: express-application
    spec:
      containers:
        - image: tsakar/express-app:latest
          name: express-application
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
