configs/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-service
  namespace: development
spec:
  ports:
    - port: 80
      targetPort: 9000
  selector:
    app: express-application
